tests/ui/associated-types/defaults-unsound-62211-1.next.stderr
error[E0277]: the trait bound `Self: Deref` is not satisfied
  --> $DIR/defaults-unsound-62211-1.rs:22:96
   |
LL |     type Output: Copy + Deref<Target = str> + AddAssign<&'static str> + From<Self> + Display = Self;
   |                                                                                                ^^^^ the trait `Deref` is not implemented for `Self`
   |
help: consider further restricting `Self`
   |
LL | trait UncheckedCopy: Sized + Deref {
   |                            +++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
